[gd_scene load_steps=21 format=3 uid="uid://dy4fwdbjpgdql"]

[ext_resource type="Texture2D" uid="uid://daturbiqw3wrv" path="res://assets/background/CloudsBG/1.png" id="1_tryro"]
[ext_resource type="Script" path="res://scenes/menu/option_menu.gd" id="1_yqm7l"]
[ext_resource type="Texture2D" uid="uid://be63yyg41br7y" path="res://assets/background/CloudsBG/3.png" id="2_8aclc"]
[ext_resource type="Texture2D" uid="uid://duf8ivrt8v7yb" path="res://assets/background/CloudsBG/4.png" id="3_tbkok"]
[ext_resource type="Texture2D" uid="uid://bsfyisldsj2oq" path="res://assets/background/CloudsBG/2.png" id="4_47nln"]
[ext_resource type="Texture2D" uid="uid://d1jvulhp44o5e" path="res://assets/terrain/Terrain (16x16).png" id="5_ap4n0"]
[ext_resource type="PackedScene" uid="uid://cbl1dwhojyqq0" path="res://scenes/game objects/main_character.tscn" id="6_gm6x4"]
[ext_resource type="Script" path="res://scenes/game objects/main_character.gd" id="7_pbf5n"]
[ext_resource type="FontFile" uid="uid://d1j8y1kod6li2" path="res://assets/fonts/DigitalDisco.ttf" id="8_tg3am"]
[ext_resource type="Texture2D" uid="uid://m61rjfnh1wi1" path="res://assets/menu/Back.png" id="9_v5fhd"]
[ext_resource type="Texture2D" uid="uid://usjkgc5xj618" path="res://assets/menu/controlImage/keyboard.png" id="11_0vstn"]
[ext_resource type="Texture2D" uid="uid://b6d71ug15e6p1" path="res://assets/menu/Levels.png" id="11_e22nb"]
[ext_resource type="Texture2D" uid="uid://cvwl0baye8oau" path="res://assets/menu/controlImage/controller.png" id="12_ncmcq"]
[ext_resource type="Texture2D" uid="uid://dw75cannbh1ql" path="res://assets/menu/controlImage/xboxs.png" id="13_w0eyn"]
[ext_resource type="AudioStream" uid="uid://dac1qi7mu11lo" path="res://assets/sound/sfx/button.mp3" id="14_6gmhx"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nyp84"]
texture = ExtResource("5_ap4n0")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_4ny5n"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_nyp84")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8bqda"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8fu1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5oayn"]
bg_color = Color(0, 0, 0, 0.541176)

[node name="OptionMenu" type="Node"]
script = ExtResource("1_yqm7l")

[node name="background" type="Node" parent="."]

[node name="TextureRect2" type="TextureRect" parent="background"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tryro")

[node name="TextureRect3" type="TextureRect" parent="background"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8aclc")

[node name="TextureRect4" type="TextureRect" parent="background"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tbkok")

[node name="TextureRect5" type="TextureRect" parent="background"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_47nln")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_4ny5n")
format = 2
layer_0/tile_data = PackedInt32Array(2424832, 393216, 0, 2490368, 393216, 1, 2555904, 393216, 2, 2424833, 458752, 0, 2490369, 458752, 1, 2555905, 458752, 2, 2424834, 524288, 0, 2490370, 524288, 1, 2555906, 524288, 2, 720896, 458752, 0, 786432, 458752, 1, 851968, 458752, 1, 720897, 458752, 0, 786433, 458752, 1, 851969, 458752, 1, 720898, 458752, 0, 786434, 458752, 1, 851970, 458752, 1, 720899, 458752, 0, 786435, 458752, 1, 851971, 458752, 1, 720900, 458752, 0, 786436, 458752, 1, 851972, 458752, 1, 720901, 458752, 0, 786437, 458752, 1, 851973, 458752, 1, 720902, 458752, 0, 786438, 458752, 1, 851974, 458752, 1, 720903, 458752, 0, 786439, 458752, 1, 851975, 458752, 1, 720904, 458752, 0, 786440, 458752, 1, 851976, 458752, 1, 720905, 458752, 0, 786441, 458752, 1, 851977, 458752, 1, 720906, 458752, 0, 786442, 458752, 1, 851978, 458752, 1, 720907, 458752, 0, 786443, 458752, 1, 851979, 458752, 1, 720908, 458752, 0, 786444, 458752, 1, 851980, 458752, 1, 720909, 458752, 0, 786445, 458752, 1, 851981, 458752, 1, 720910, 458752, 0, 786446, 458752, 1, 851982, 458752, 1, 720911, 458752, 0, 786447, 458752, 1, 851983, 458752, 1, 720912, 458752, 0, 786448, 458752, 1, 851984, 458752, 1, 720913, 458752, 0, 786449, 458752, 1, 851985, 458752, 1, 720914, 458752, 0, 786450, 458752, 1, 851986, 458752, 1, 720915, 458752, 0, 786451, 458752, 1, 851987, 458752, 1, 720916, 458752, 0, 786452, 458752, 1, 851988, 458752, 1, 720917, 458752, 0, 786453, 458752, 1, 851989, 458752, 1, 720918, 458752, 0, 786454, 458752, 1, 851990, 458752, 1, 720919, 458752, 0, 786455, 458752, 1, 851991, 458752, 1, 983039, 131072, 4, 917503, 131072, 5, 851967, 131072, 5, 786431, 131072, 5, 720895, 131072, 5, 655359, 131072, 5, 589823, 131072, 5, 524287, 131072, 5, 458751, 131072, 5, 393215, 131072, 5, 327679, 131072, 5, 262143, 131072, 5, 196607, 131072, 5, 131071, 131072, 5, 65535, 131072, 5, -1, 131072, 6, -65536, 65536, 2, -65535, 65536, 2, -65534, 65536, 2, -65533, 65536, 2, -65532, 65536, 2, -65531, 65536, 2, -65530, 65536, 2, -65529, 65536, 2, -65528, 65536, 2, -65527, 65536, 2, -65526, 65536, 2, -65525, 65536, 2, -65524, 65536, 2, -65523, 65536, 2, -65522, 65536, 2, -65521, 65536, 2, -65520, 65536, 2, -65519, 65536, 2, -65518, 65536, 2, -65517, 65536, 2, -65516, 65536, 2, -65515, 65536, 2, -65514, 65536, 2, -65513, 65536, 2, -65512, 0, 6, 24, 0, 5, 65560, 0, 5, 131096, 0, 5, 196632, 0, 5, 262168, 0, 5, 327704, 0, 5, 393240, 0, 5, 458776, 0, 5, 524312, 0, 5, 589848, 0, 5, 655384, 0, 5, 720920, 0, 5, 786456, 0, 5, 851992, 0, 5, 917528, 0, 4, 917504, 65536, 0, 917505, 65536, 0, 917506, 65536, 0, 917507, 65536, 0, 917508, 65536, 0, 917509, 65536, 0, 917510, 65536, 0, 917511, 65536, 0, 917512, 65536, 0, 917513, 65536, 0, 917514, 65536, 0, 917515, 65536, 0, 917516, 65536, 0, 917517, 65536, 0, 917518, 65536, 0, 917519, 65536, 0, 917520, 65536, 0, 917521, 65536, 0, 917522, 65536, 0, 917523, 65536, 0, 917524, 65536, 0, 917525, 65536, 0, 917526, 65536, 0, 917527, 65536, 0)

[node name="CharacterBody2D" parent="." instance=ExtResource("6_gm6x4")]
position = Vector2(257, 10)
script = ExtResource("7_pbf5n")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Levels" type="Panel" parent="UI"]
offset_left = 7.0
offset_top = 432.0
offset_right = 118.0
offset_bottom = 472.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8bqda")

[node name="levels" type="Button" parent="UI/Levels"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_tg3am")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_w8fu1")
text = "Levels"
icon = ExtResource("11_e22nb")
alignment = 0
expand_icon = true

[node name="How To Play" type="Panel" parent="UI"]
offset_left = 7.0
offset_top = 477.0
offset_right = 118.0
offset_bottom = 517.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8bqda")

[node name="back" type="Button" parent="UI/How To Play"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_tg3am")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_w8fu1")
text = "Menu"
icon = ExtResource("9_v5fhd")
alignment = 0
expand_icon = true

[node name="controlls" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -548.0
offset_top = -299.0
offset_right = 537.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5oayn")

[node name="Label" type="Label" parent="UI/controlls"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -223.5
offset_top = 20.0
offset_right = -101.5
offset_bottom = 51.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_tg3am")
theme_override_font_sizes/font_size = 35
text = "Controlls"

[node name="TextureRect" type="TextureRect" parent="UI/controlls"]
texture_filter = 1
layout_mode = 0
offset_left = 50.0
offset_top = 69.0
offset_right = 707.0
offset_bottom = 359.0
texture = ExtResource("11_0vstn")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="UI/controlls"]
texture_filter = 1
layout_mode = 0
offset_left = 765.0
offset_top = 36.0
offset_right = 1029.0
offset_bottom = 203.0
texture = ExtResource("12_ncmcq")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="UI/controlls"]
texture_filter = 1
layout_mode = 0
offset_left = 766.0
offset_top = 214.0
offset_right = 1030.0
offset_bottom = 381.0
texture = ExtResource("13_w0eyn")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/controlls"]
layout_mode = 0
offset_left = 188.0
offset_top = 354.0
offset_right = 541.0
offset_bottom = 394.0
theme_override_constants/separation = 27

[node name="left" type="Label" parent="UI/controlls/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.937255, 0.513726, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_tg3am")
theme_override_font_sizes/font_size = 30
text = "LEFT"

[node name="right" type="Label" parent="UI/controlls/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.643137, 0.956863, 0.643137, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_tg3am")
theme_override_font_sizes/font_size = 30
text = "RIGHT"

[node name="jump" type="Label" parent="UI/controlls/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0.643137, 0.643137, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_tg3am")
theme_override_font_sizes/font_size = 30
text = "JUMP"

[node name="pause" type="Label" parent="UI/controlls/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.968627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_tg3am")
theme_override_font_sizes/font_size = 30
text = "PAUSE"

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_6gmhx")
volume_db = -10.0

[connection signal="mouse_entered" from="UI/Levels/levels" to="." method="_on_levels_mouse_entered"]
[connection signal="pressed" from="UI/Levels/levels" to="." method="_on_levels_pressed"]
[connection signal="mouse_entered" from="UI/How To Play/back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="UI/How To Play/back" to="." method="_on_back_pressed"]
